src/objects/Return_Detail__c/Return_Detail__c.object-meta.xml
<CustomObject>
    <label>Return Detail</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>