src/objects/Return_Detail__c/fields/Balanced_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Balanced_Quantity__c</fullName>
    <formula>Return_Quantity__c - Dispostion_Transfer_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balanced Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>