src/objects/Return_Detail__c/fields/Dispostion_Transfer_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Dispostion_Transfer_Quantity__c</fullName>
    <description>Sum of Dispostion and Transfer Quantity</description>
    <label>Dispostion Transfer Quantity</label>
    <summarizedField>Disposition_Transfer_Details__c.Quantity__c</summarizedField>
    <summaryForeignKey>Disposition_Transfer_Details__c.Return_Detail__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>