src/objects/Return_Detail__c/fields/Legacy_Id_Return__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Id_Return__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>