src/objects/Return_Detail__c/fields/Loaner_Line__c.field-meta.xml
<CustomField>
    <fullName>Loaner_Line__c</fullName>
    <label>Loaner Line</label>
    <referenceTo>Loaner_Line__c</referenceTo>
    <relationshipLabel>Return Details</relationshipLabel>
    <relationshipName>Return_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>