src/objects/Return_Detail__c/fields/Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Return Date</label>
    <type>Date</type>
</CustomField>