src/objects/Return_Detail__c/fields/Return_Details__c.field-meta.xml
<CustomField>
    <fullName>Return_Details__c</fullName>
    <label>Return Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>