src/objects/Return_Detail__c/fields/Return_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Return_Quantity__c</fullName>
    <label>Return Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>