src/objects/Return_Detail__c/fields/Return_To__c.field-meta.xml
<CustomField>
    <fullName>Return_To__c</fullName>
    <label>Return To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rep/Disti</fullName>
            </value>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>SNY Loaner Pool</fullName>
            </value>
            <value>
                <fullName>RMA</fullName>
            </value>
            <value>
                <fullName>Purchased by Customer</fullName>
            </value>
            <value>
                <fullName>Purchased by Rep/Disti</fullName>
            </value>
            <value>
                <fullName>Transferred to new loaner</fullName>
            </value>
            <value>
                <fullName>Written Off</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>