src/objects/Return_Detail__c/fields/Return_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Return_To_Location__c</fullName>
    <label>Return To Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>