src/objects/Return_Detail__c/fields/Returned_Part_Condition__c.field-meta.xml
<CustomField>
    <fullName>Returned_Part_Condition__c</fullName>
    <label>Returned Part Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Used</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>