src/objects/Return_Detail__c/fields/Total_Qty_in_SNY__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_in_SNY__c</fullName>
    <formula>IF(ISPICKVAL(Return_To__c, &apos;SNY Loaner Pool&apos;) , (Return_Quantity__c-Dispostion_Transfer_Quantity__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Qty in SNY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>