src/objects/Return_Detail__c/validationRules/Qty_is_not_more_than_Loaner_line_Qty.validationRule-meta.xml
<ValidationRule>
    <fullName>Qty_is_not_more_than_Loaner_line_Qty</fullName>
    <active>true</active>
    <errorConditionFormula>Return_Quantity__c &lt;    Dispostion_Transfer_Quantity__c</errorConditionFormula>
    <errorMessage>Total Disposition/Transfer Quantity should be less than Return Quantity.</errorMessage>
</ValidationRule>