src/objects/Return_Detail__c/validationRules/Qty_should_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Qty_should_be_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Return_Quantity__c &lt;=0</errorConditionFormula>
    <errorDisplayField>Return_Quantity__c</errorDisplayField>
    <errorMessage>Quantity should be greater than 0</errorMessage>
</ValidationRule>